--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import "tailwindcss";
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -38,11 +39,4 @@
 
 .read-the-docs {
   color: #888;
-}
-
-.red {
-  height: 10px;
-  width: 100%;
-  background: red;
-  z-index: 999;
 }
